setup routes and navbar

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #333;
+      line-height: 1.5;
+    }
+  </style>
 </html>
