--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,9 @@
       color: #333;
       line-height: 1.5;
     }
+    a:-webkit-any-link {
+      color: white;
+      text-decoration: none;
+    }
   </style>
 </html>
